[FLEX-33292] Fixed again. https://issues.apache.org/jira/browse/FLEX-33292
Generator:
Fix the missing doublequote issue when use spaces in path. Now I rewrite the execution method using ProcessBuilder and codifying all each parameters as individual ProcessBuilder commands, this way fix the platform dependent issue with spaces in path.
 BTW, I include the compiler output to the console.

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/utilities/trunk@1423387 13f79535-47bb-0310-9956-ffa450edef68